// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> should add additional class if provided 1`] = `
<button
  class="root undefined bordered"
  data-testid="icon-button"
>
  <span
    class="root undefined material-icons"
    data-testid="icon"
  >
    account
  </span>
</button>
`;

exports[`<IconButton /> should not fire events if disabled 1`] = `
<button
  class="root undefined"
  data-testid="icon-button"
  disabled=""
>
  <span
    class="root undefined material-icons"
    data-testid="icon"
  >
    account
  </span>
</button>
`;

exports[`<IconButton /> should render custom icon 1`] = `
<button
  class="root undefined"
  data-testid="icon-button"
>
  <span
    class="root undefined"
    data-testid="icon"
  >
    <span>
      custom
    </span>
  </span>
</button>
`;

exports[`<IconButton /> should render large icon button 1`] = `
<button
  class="root large"
  data-testid="icon-button"
>
  <span
    class="root undefined material-icons"
    data-testid="icon"
  >
    account
  </span>
</button>
`;

exports[`<IconButton /> should render small icon button 1`] = `
<button
  class="root small"
  data-testid="icon-button"
>
  <span
    class="root small material-icons"
    data-testid="icon"
  >
    account
  </span>
</button>
`;

exports[`<IconButton /> should render string icon 1`] = `
<button
  class="root undefined"
  data-testid="icon-button"
>
  <span
    class="root undefined material-icons"
    data-testid="icon"
  >
    account
  </span>
</button>
`;
